-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.6.2
-
Buildroot cross compile for aarch64 and odroid-mali.
-
f1b4bd4790860e1ff5afcec111a359bc3a91cfda
Qt5Base eglfs compile with odroid-mali failes with the following error message (see http://autobuild.buildroot.net/results/48c/48c458c035162169e8ca7c34ae65e9064822f25a,
http://autobuild.buildroot.net/results/48c/48c458c035162169e8ca7c34ae65e9064822f25a/build-end.log):
qeglfsmaliintegration.cpp:45:8: error: redefinition of 'struct fbdev_window'
struct fbdev_window {
^
In file included from /accts/mlweber1/rc-buildroot-test/scripts/instance-0/output/host/usr/aarch64-buildroot-linux-gnu/sysroot/usr/include/EGL/eglplatform.h:28:0,
from /accts/mlweber1/rc-buildroot-test/scripts/instance-0/output/host/usr/aarch64-buildroot-linux-gnu/sysroot/usr/include/EGL/egl.h:36,
from ../../../eglfs/qeglfsglobal.h:45,
from ../../../eglfs/qeglfsdeviceintegration.h:48,
from qeglfsmaliintegration.h:37,
from qeglfsmaliintegration.cpp:34:
The shadow definition of struct fbdev_window was introduces with
change https://code.qt.io/cgit/qt/qtbase.git/commit/?h=dev&id=58bed4cda98e8e25db8adc61c7db73b6853077dc.