eglfs: fix eglfs_mali compile for odroid-mali

Avoid duplicated struct fbdev_window definition (introduced by commit
58bed4cda98e8e25db8adc61c7db73b6853077dc) by renaming the local
shadow definition to struct shadow_fbdev_window.

Task-number: QTBUG-57156
Change-Id: I72b03f09fc57ddcd0284d6d3554a5658e02b80fc
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
Reviewed-by: Julien Corjon <corjon.j@ecagroup.com>