src/plugins/platforms/eglfs/deviceintegration/eglfs_mali/qeglfsmaliintegration.cpp
@@ -42,7 +42,7 @@
 
 QT_BEGIN_NAMESPACE
 
-struct fbdev_window {
+struct shadow_fbdev_window {
     unsigned short width;
     unsigned short height;
 };
@@ -85,7 +85,7 @@ EGLNativeWindowType QEglFSMaliIntegration::createNativeWindow(QPlatformWindow *w
     Q_UNUSED(window);
     Q_UNUSED(format);
 
-    fbdev_window *fbwin = reinterpret_cast<fbdev_window *>(malloc(sizeof(fbdev_window)));
+    shadow_fbdev_window *fbwin = reinterpret_cast<shadow_fbdev_window *>(malloc(sizeof(shadow_fbdev_window)));
     if (NULL == fbwin)
         return 0;
 
